fix: 자바 버전 11로 변경으로 인한 문법 수정