@@ -4,6 +4,7 @@ import camp.nextstep.edu.missionutils.Console;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static menu.enums.ViewMessage.INPUT_COACH_HATE_MENUS;
 import static menu.enums.ViewMessage.INPUT_COACH_NAMES;
@@ -13,12 +14,12 @@ public class InputView {
     public List<String> readCoachNames() {
         System.out.println(INPUT_COACH_NAMES.getMessage());
         return Arrays.stream(Console.readLine().strip().split(SPLIT_DELIMITER))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<String> readHateMenus(String name) {
         System.out.printf(INPUT_COACH_HATE_MENUS.getMessage(), name);
         return Arrays.stream(Console.readLine().strip().split(SPLIT_DELIMITER))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
